# uncorreotemporal-mcp-server

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  glama.json  pyproject.toml  server.json
.github/workflows/: publish.yml  test.yml
deploy/: README.md  docker-compose.public-mcp.yml  nginx.mcp.conf
directory-listings/: awesome-mcp-entry.md  mcp.so-listing.json  modelcontextprotocol-servers.md
examples/: agent_creates_account.py  colab-email-agent.ipynb  langchain_agent_signup.py  openai_agent_signup.py  simple_workflow.py
examples/n8n/: README.md  n8n-workflow.json
src/uncorreotemporal_mcp/: server.py
src/uncorreotemporal_mcp/tools/: __init__.py  common.py  complete_signup_flow.py  create_signup_inbox.py  extract_otp_code.py  extract_verification_link.py  get_latest_email.py  wait_for_verification_email.py
src/uncorreotemporal_mcp/utils/: __init__.py  api_client.py  email_parser.py
tests/: conftest.py  test_api_client.py  test_dockerfile.py  test_email_parser.py  test_examples.py  test_server.py  test_tools_complete_signup_flow.py  test_tools_workflows.py
video/: .gitignore  package-lock.json  package.json  tsconfig.json
video/scripts/: generate-narration.mjs
video/src/: Root.tsx  constants.ts
video/src/components/: CodeBlock.tsx  ColabCell.tsx  OutputBlock.tsx  TextReveal.tsx  ToolBadge.tsx
video/src/scenes/: Architecture.tsx  CTA.tsx  ColabDemo.tsx  ElevenLabsIntegration.tsx  Intro.tsx  MCPTools.tsx  Problem.tsx  SolutionTools.tsx  SunoIntegration.tsx
