[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uncorreotemporal-mcp"
version = "0.1.0"
description = "MCP server for UnCorreoTemporal — programmable temporary email for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
uncorreotemporal-mcp = "uncorreotemporal_mcp.server:main"

[project.urls]
Homepage = "https://uncorreotemporal.com"
Repository = "https://github.com/francofuji/uncorreotemporal-mcp-server"

[tool.hatch.build.targets.wheel]
packages = ["src/uncorreotemporal_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]
